<resources>
    <string name="app_name">InvetoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="empty">invetory is empty</string>
    <string name="insert">insert test data</string>
    <string name="delete">delete all</string>
    <string name="overview">Overview</string>
    <string name="hint_name">enter product name</string>
    <string name="hint_price">enter product price</string>
    <string name="hint_quantity">insert quantity</string>
    <string name="hint_sale">enter product sale</string>

    <string name="editor_activity_title_new_inventory">Add a inventory</string>
    <string name="editor_activity_title_edit_inventory">Edit inventory</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_order">Order</string>
    <string name="editor_insert_inventory_successful">Inventory saved</string>
    <string name="editor_insert_inventory_failed">Error with saving inventory</string>
    <string name="editor_update_inventory_successful">Inventory updated</string>
    <string name="editor_update_inventory_failed">Error with updating inventory</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>


    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_inventory_successful">Inventory deleted</string>
    <string name="editor_delete_inventory_failed">Error with deleting inventory</string>
    <string name="delete_dialog_msg">Delete this inventory?</string>
    <string name="cancel">Cancel</string>
    <string name="category_overview">Overview</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="picture">Picture:</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="sale">Sale:</string>
    <string name="pick_image">pick image</string>

    <string name="received">received</string>
    <string name="sold">sold</string>

</resources>